重构markdown